--- a/practice.html
+++ b/practice.html
@@ -7,12 +7,14 @@
 </head>
 <body>
 			<h1>UserDemo22.github.io</h1>
-			<h2>latge</h2>
+			<h2>large</h2>
 			<h3>medium</h3>
 			<h4>smaller medium</h4>
 			<h5>small</h5>
 			<h6>tiny</h6>
 			
 			<p>WOOOOOOOOOO.</p>
+			
+		<ing src="https://s.graphiq.com/sites/default/files/stories/t4/15_Tiniest_Dog_Breeds_1718_3083.jpg" width="100" height="100" />
 </body>
 </html>
