--- a/practice.html
+++ b/practice.html
@@ -15,13 +15,13 @@
 			
 			<p>WOOOOOOOOOO.</p>
 			
-		<p>	
-		<ing src="https://s.graphiq.com/sites/default/files/stories/t4/15_Tiniest_Dog_Breeds_1718_3083.jpg" width="100" height="100"/>
-		</p>
+			
+		<img src="https://s.graphiq.com/sites/default/files/stories/t4/15_Tiniest_Dog_Breeds_1718_3083.jpg" width="100" height="100" />
+		
 		
 		
 		<p>
-		<ing src="images/Dog.jpg" width="100" height="100" />
+		<img src="Protonp.github.io/images/dog.jpg" width="720" height="720" />
 		</p>
 </body>
 </html>
