my ed murphy film thing

--- a/best Movie ever.html
+++ b/best Movie ever.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html>
-		<body style="background-color:rgb(0,255,255);">
+		
 <head>
 <style>
-div {height:90px;width:100%;}
+
 </style>
 	<meta charset="utf-8">
+	
 	<title>My favorite movie</title>
+	
+	<link href="main.css" rel="stylesheet"
+	<meta charset="UTF-8">
+	<title>Div Tag Template</title>
 </head>
 <body>
 
-	<div style="background-color:rgb(0,255,255)"></div>
-			<h2>My favorite movie is Meet Dave</h2>
-			<h2>                                   
+
 
 			<h3 style="color:black;" red> > Summary </h3>
 			
