--- a/scratch.html
+++ b/scratch.html
@@ -48,14 +48,55 @@
 											<!-- Section Content -->
 	<section id="content">
 	
-	<h2> Scratch Content</h2>
+	<h1> Scratch</h1>
+	<u><h2> Name Project</h2></u>
+		<p>
+		<img src="images/name.png">
+		<u><h2>
+		Computer Buying Project
+		</h2></u>
+		<img src="images/com.png">
+		<u><h2> Final Project
+		<h2></u>
+			<img src="images/game.png">
+		</p>
+	</section>		<!-- end Content -->
 	
-		<p>Replace this text with project and assignment examples</p>
-	</section>							<!-- end Content -->
 	
 											<!-- Aside Content -->
 	<aside id="hobbies">
-		<p>Place things you like here; photos, links, videos, etc.</p>
+		<p>
+		
+		
+		
+		<h3> Name Project</h3>					
+	<u><i><b>When</b></i></u> the green flag is pressed letters of your name must perform different actions.
+When the green flag is pressed again it has to reset and start over.
+Each letter had to have its own action. <a href="#">Name Project</a>
+       
+            <h3> What I learned</h3>
+	<ul>
+			<li>Using event blocks : When the green flag is pressed my letters would perform an action.</li>
+			<li>Resetting the program: When the green flag was pressed my letters would go back into place.</li>
+			<li>Movement: I rotated and moved letters in certain shapes and patterns.</li>
+	</ul>
+
+
+		</p>
+		<p> 
+		<h3> Computer buying project</h3>
+		
+		
+		<u><i><b>I</b></i></u> had to interview and find the best computer for someone. 
+Once i had my computer options for them picked out I had to design a presentation to show everyone how i selected the best computer for them. 
+I used scratch to make a slideshow presentation. <a href="#">Computer buting presentation</a>
+
+<h3> What I learned</h3>
+	<ul>
+			<li>Background: How to change the background for each slide when certain events happen.</li>
+			<li>Sprites: Using sprites that appear and disappear to show facts and stats.</li>
+			<li>Variables: Using Variables to controle specific events in my project</li>
+	</ul>
 	</aside>								<!-- end Hobbies -->
 	
 												<!-- Footer Content -->
