--- a/scratch.html
+++ b/scratch.html
@@ -97,6 +97,25 @@ I used scratch to make a slideshow presentation. <a href="#">Computer buting pre
 			<li>Sprites: Using sprites that appear and disappear to show facts and stats.</li>
 			<li>Variables: Using Variables to controle specific events in my project</li>
 	</ul>
+	<h3> Game Project</h3>
+	<p> In the project I was required to create a game or a story. The game/story had to have animations along with multiple scenes/levels. If it was a game it was required to have at least two levels that got continuously harder as you went along. 
+	</p>
+<ul>
+	<li>Clones: I figured out how to make clones for specific tasks and have those clones react to the space around them
+	</li>Animation: I created an animation that cycled when the sprite jumped or walked
+	</li>
+	<li>Game over screen: I created a game over screen in the event that the player touched something they shouldn’t
+	</li>
+	<li> Next level: I created a flag that when touched by the player would change the level to the next stage.
+	</li>
+	<li> Timer: The timer i made kept track of how long they had been playing the game
+	</li>
+	<li>Score: The score variable was used to see how many times they touched they main objective
+	</li>
+	 
+
+</ul>
+	
 	</aside>								<!-- end Hobbies -->
 	
 												<!-- Footer Content -->
