Added the Jeroo page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 			<li>
 					<a href="index.html">Home</a>
 			</li>
+				<li>
+					<a href="jeroo.html">Jeroo</a>
+			</li>
 		</ul>
 		</div>						<!-- end Navigation links -->
 		
@@ -50,17 +53,20 @@
 	
 	<h2> Intrests Content</h2>
 	
-		<p>Replace this text with project and assignment examples</p>
+		<h3>This is a collection of all the coding works i have done for Exploring Computer Science</h3>
 	</section>							<!-- end Content -->
 	
 											<!-- Aside Content -->
 	<aside id="hobbies">
-		<p>Place things you like here; photos, links, videos, etc.</p>
+		
+	<h2>I am Peter. I enjoy sleep and tastey food.</h2>
+	
+	
 	</aside>								<!-- end Hobbies -->
 	
 												<!-- Footer Content -->
 	<footer id="pageFooter">
-		<p>author, contact info, copyright</p>
+		<p>Written By Peter.S</p>
 	</footer>									<!-- end Footer -->
 	
 </div>											<!-- end wrapper -->
