--- a/jeroo.html
+++ b/jeroo.html
@@ -5,7 +5,7 @@
 <head>
 <link href="main.css" rel="stylesheet"
 	<meta charset="UTF-8">
-	<title>Final Project Page</title>
+	<title>Div Tag Template</title>
 	
 			
 		
@@ -40,7 +40,7 @@
 			<li>
 					<a href="index.html">Home</a>
 			</li>
-				<li>
+			<li>
 					<a href="jeroo.html">Jeroo</a>
 			</li>
 		</ul>
@@ -50,20 +50,17 @@
 	
 											<!-- Section Content -->
 	<section id="content">
-	
-	<h2> Final Project Content</h2>
-	
-		<p>Replace this text with project and assignment examples</p>
+		<p>This is where i place pictured of my work</p>
 	</section>							<!-- end Content -->
 	
 											<!-- Aside Content -->
 	<aside id="hobbies">
-		<p>Place things you like here; photos, links, videos, etc.</p>
+		<p>This is where i explain my project and show links.</p>
 	</aside>								<!-- end Hobbies -->
 	
 												<!-- Footer Content -->
 	<footer id="pageFooter">
-		<p>Written By Peter S</p>
+		<p>Written By Peter.S</p>
 	</footer>									<!-- end Footer -->
 	
 </div>											<!-- end wrapper -->
