--- a/python.html
+++ b/python.html
@@ -40,7 +40,11 @@
 			<li>
 					<a href="index.html">Home</a>
 			</li>
+				<li>
+					<a href="jeroo.html">Jeroo</a>
+			</li>
 		</ul>
+	
 		</div>						<!-- end Navigation links -->
 		
 	</header>							<!-- end header -->
@@ -60,7 +64,7 @@
 	
 												<!-- Footer Content -->
 	<footer id="pageFooter">
-		<p>author, contact info, copyright</p>
+		<p>Written By Peter S</p>
 	</footer>									<!-- end Footer -->
 	
 </div>											<!-- end wrapper -->
