--- a/scratch.html
+++ b/scratch.html
@@ -40,6 +40,9 @@
 			<li>
 					<a href="index.html">Home</a>
 			</li>
+				<li>
+					<a href="jeroo.html">Jeroo</a>
+			</li>
 		</ul>
 		</div>						<!-- end Navigation links -->
 		
@@ -47,6 +50,8 @@
 	
 											<!-- Section Content -->
 	<section id="content">
+	
+	
 	
 	<h1> Scratch</h1>
 	<u><h2> Name Project</h2></u>
@@ -66,7 +71,7 @@
 											<!-- Aside Content -->
 	<aside id="hobbies">
 		<p>
-		
+		<img src="images/2000px-Scratchddddcat.svg.jpg">
 		
 		
 		<h3> Name Project</h3>					
@@ -120,7 +125,7 @@ I used scratch to make a slideshow presentation. <a href="#">Computer buting pre
 	
 												<!-- Footer Content -->
 	<footer id="pageFooter">
-		<p>author, contact info, copyright</p>
+		<p>Written By Peter S</p>
 	</footer>									<!-- end Footer -->
 	
 </div>											<!-- end wrapper -->
