--- a/temp use.html
+++ b/temp use.html
@@ -40,6 +40,9 @@
 			<li>
 					<a href="#">Home</a>
 			</li>
+				<li>
+					<a href="jeroo.html">Jeroo</a>
+			</li>
 		</ul>
 		</div>						<!-- end Navigation links -->
 		
