--- a/jeroo.html
+++ b/jeroo.html
@@ -5,7 +5,7 @@
 <head>
 <link href="main.css" rel="stylesheet"
 	<meta charset="UTF-8">
-	<title>Div Tag Template</title>
+	<title>Jeroo Page</title>
 	
 			
 		
