--- a/jeroo.html
+++ b/jeroo.html
@@ -15,7 +15,7 @@
 <body>
 
 										<!-- Page Content wrapper -->
-<div id="wrapper">
+< id="wrapper">
 
 									<!-- page header - logo, title, links -->
 	<header id="mainHeader">
