--- a/jeroo.html
+++ b/jeroo.html
@@ -15,12 +15,12 @@
 <body>
 
 										<!-- Page Content wrapper -->
-< id="wrapper">
+	<div id="wrapper">
 
 									<!-- page header - logo, title, links -->
 	<header id="mainHeader">
 		<h1>Exploring Computer Science</h1>
-		<h2>My Collection of Programming Projects and Assignments</h2>
+		<h2>My Collection of Programming Projects Assignments</h2>
 		
 											<!-- site Navigation links -->
 		<div id="mainNav">
