--- a/jeroo.html
+++ b/jeroo.html
@@ -50,12 +50,57 @@
 	
 											<!-- Section Content -->
 	<section id="content">
-		<p>This is where i place pictured of my work</p>
+		<p>	<h1> Jeroo</h1>
+	<u><h2> Unit 1</h2></u>
+		<p>
+		<img src="images/jer1.1.png">
+		<u><h2>
+		<img src="images/jer1.2.png">
+	
+		
+		<u><h2> Unit 2</h2></u>
+		
+		<img src="images/jer2.1.png">
+		<img src="images/jer2.2.png">
+		<u><h2> Unit 3
+		<h2></u>
+			<img src="images/jer3.1.png">
+			<img src="images/jer3.2.png">
+			
+			<u><h2> Unit 4
+		<h2></u>
+			<img src="images/jer4.1.png">
+			<img src="images/jer4.2.png">
+		</p>
 	</section>							<!-- end Content -->
 	
 											<!-- Aside Content -->
 	<aside id="hobbies">
-		<p>This is where i explain my project and show links.</p>
+	
+	<p> <h3> Jeroo Unit 1 </h3> </p>
+	
+	<p> Jeroo unit one was the basics of Jeroo. We learned how 
+	to move and controle our Jeroo through very basic commands </p>
+	
+	<p> <h3> Jeroo Unit 2 </h3> </p>
+	
+		<p> Jeroo unit two showed us how to create methods that our Jeroo could call upon anytime. 
+	This greatly streamlined the process of having a Jeroo executing commands.
+		</p>
+	
+	
+	<p> <h3> Jeroo Unit 3 </h3> </p>
+		<p> In unit three we learned how to use loops to complete our tasks.
+	The loops would repeat until a specific condition was met.
+	By using loops we were able to greatly reduce the amount of code needed to complete a task.
+		</p>
+		
+		
+		
+		<p> <h3> Jeroo Unit 4 </h3> </p>
+		<p> In unit four we were taught the "if" statement.
+		This statement could be used to help stop loops more easily.
+		If a statement was true the "if" command would execute somthing.
 	</aside>								<!-- end Hobbies -->
 	
 												<!-- Footer Content -->
