--- a/python.html
+++ b/python.html
@@ -52,14 +52,91 @@
 											<!-- Section Content -->
 	<section id="content">
 	
-	<h2> Python Content</h2>
+	<h1> Python</h1>
+	<u><h2> Lab Runner</h2></u>
+		<p>
+		<img src="images/lab1.png">
+		<u><h2>
+		Wall Runner
+		</h2></u>
+		<img src="images/unit 2.png">
+		
+		<u><h2> Ground Runner
+		<h2></u>
+			<img src="images/unit3.png">
+		
+		</p>
+	</section>		<!-- end Content -->
 	
-		<p>Replace this text with project and assignment examples</p>
-	</section>							<!-- end Content -->
 	
 											<!-- Aside Content -->
 	<aside id="hobbies">
-		<p>Place things you like here; photos, links, videos, etc.</p>
+		<p>
+		
+		
+		
+		<h3> Lab Runner unit 1</h3>					
+	<u><i><b>When</b></i></u> the lab runner is started a man is drawn on the screen.
+	The man can then be controled with the arrow keys. 
+	The many is unable to go beyong the endge of the screen.
+	
+       
+            <h3> What I learned in unit 1</h3>
+	<ul>
+			<li>How to set limits.</li>
+			<li>How to move an image around the screen.</li>
+			<li>How class files work and how to call them.</li>
+	</ul>
+
+
+		</p>
+		<p> 
+		<h3> Wall Runner unit 2</h3>
+		
+		
+		<u><i><b>The</b></i></u> wall runner is a program that demonstrates collisoin. 
+		In the wall runner objects that touch collide and do not go over one another.
+		Unit 2 was focused mainly on collision between objects.</a>
+
+<h3> What I learned unit 2</h3>
+	<ul>
+			<li>How to collide objects</li>
+			<li>How to make something happen  when objects collided</li>
+			<li>How to make and keep track of score</li>
+	</ul>
+	
+	<h3> Groundrunner unit 3</h3>
+	<p> In the groundrunner I created a background and a coin. A then created a guy who would go around and collect this coin.
+		when the man touched the coin the coin would go to a random spot on the map and the score would inscrease.
+		Displayed at the top of the screen was a timer that counted down and the score. 
+		When the man collected 7 points the game would say "Winner."
+		If the man ran out of time the game would say "GameOver."
+		
+	</p>
+	<h3> What I learned unit 3</h3>
+	<ul>
+			<li>How to draw ground</li>
+			<li>How to draw background</li>
+			
+			<li>How to make a timer</li>
+	</ul>
+	
+<h3> Dagin Runner Unit 4</h3>
+	<p> Dagin runner is a game where you play as Dagin. Your goal is to steal a pencil and not get caught by the cops.
+	If the police catch you then it is game over. If you touch the teacher's desk it is game over. When you get the pencil the level randomizes.
+	
+		
+	</p>
+	<h3> What I learned unit 4</h3>
+	<ul>
+			<li>How to make a title screen</li>
+			<li>How to make a game over screen</li>
+			
+			<li>How to make an event happen at a certain point/level</li>
+	</ul>
+	<u><h2> Dagin Runner
+		<h2></u>
+			<img src="images/dagin.png">
 	</aside>								<!-- end Hobbies -->
 	
 												<!-- Footer Content -->
