--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 											<!-- Section Content -->
 	<section id="content">
 	
-	<h2> Intrests Content</h2>
+	<h2> Interests Content</h2>
 	
 		<h3>This is a collection of all the coding works i have done for Exploring Computer Science</h3>
 	</section>							<!-- end Content -->
