--- a/java.html
+++ b/java.html
@@ -5,7 +5,7 @@
 <head>
 <link href="main.css" rel="stylesheet"
 	<meta charset="UTF-8">
-	<title>Java Page</title>
+	<title>Index Page</title>
 	
 			
 		
@@ -51,19 +51,31 @@
 											<!-- Section Content -->
 	<section id="content">
 	
-	<h2> Java Content</h2>
 	
-		<p>Replace this text with project and assignment examples</p>
+	
+		<h3>Adventure project</h3>
+		<img src="images/javaad.png">
 	</section>							<!-- end Content -->
 	
 											<!-- Aside Content -->
 	<aside id="hobbies">
-		<p>Place things you like here; photos, links, videos, etc.</p>
+		
+	<h2>Java</h2>
+	<p>My java adventure project is a choose your own path game with a decision tree. Each choice unlocks more choices and progresses the story.
+		</p>
+		<h3> What I learned</h3>
+	<ul>
+			<li>How to take in text and use it.</li>
+			<li>How to lock choices to specific times.</li>
+			
+	</ul>
+	
+	
 	</aside>								<!-- end Hobbies -->
 	
 												<!-- Footer Content -->
 	<footer id="pageFooter">
-		<p>Written By Peter S</p>
+		<p>Written By Peter.S</p>
 	</footer>									<!-- end Footer -->
 	
 </div>											<!-- end wrapper -->
